home routing, fix scrollbars

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @media (prefers-color-scheme: dark) {
+    color-scheme: dark;
+  }
+}
+
+* {
+  scrollbar-width: thin;
+}
+
 body {
   @apply dark:text-white;
 }
+
 
 .container {
   @apply max-w-screen-xl mx-auto px-4 box-border;
